Added PaddedAtomicReference and PaddedAtomicLong. Removed @Contended and unsafe exports