@@ -13,11 +13,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.openjdk.jol</groupId>
-      <artifactId>jol-core</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
@@ -55,6 +50,12 @@
       <artifactId>jmh-generator-annprocess</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.euhedral</groupId>
+      <artifactId>euhedral-hardware-utils</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -71,9 +72,6 @@
             @{argLine}
             -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
             -XX:+EnableDynamicAgentLoading
-            -XX:-RestrictContended
-            --add-opens java.base/java.lang=ALL-UNNAMED
-            --add-exports java.base/jdk.internal.platform=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
